// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 2`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "domain",
          "value": "test-company.com",
        },
      ],
    },
  ],
  "properties": Array [
    "name",
    "domain",
    "lifecyclestage",
    "segment_group_id",
  ],
  "sorts": Array [
    "name",
  ],
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 3`] = `
Object {
  "associations": Array [],
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 4`] = `
Object {
  "description": "Unique Property to map Segment Group ID with a HubSpot Company Object",
  "displayOrder": -1,
  "fieldType": "text",
  "formField": false,
  "groupName": "companyinformation",
  "hasUniqueValue": true,
  "hidden": true,
  "label": "Segment Group ID",
  "name": "segment_group_id",
  "type": "string",
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 5`] = `
Object {
  "associations": Array [],
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and create a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 6`] = `undefined`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 2`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "domain",
          "value": "test-company.com",
        },
      ],
    },
  ],
  "properties": Array [
    "name",
    "domain",
    "lifecyclestage",
    "segment_group_id",
  ],
  "sorts": Array [
    "name",
  ],
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 3`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 4`] = `
Object {
  "description": "Unique Property to map Segment Group ID with a HubSpot Company Object",
  "displayOrder": -1,
  "fieldType": "text",
  "formField": false,
  "groupName": "companyinformation",
  "hasUniqueValue": true,
  "hidden": true,
  "label": "Segment Group ID",
  "name": "segment_group_id",
  "type": "string",
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 5`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create SEGMENT_UNIQUE_IDENTIFIER and update a company if SEGMENT_UNIQUE_IDENTIFIER property is not found 6`] = `undefined`;

exports[`HubSpot.upsertCompany should create a company with and associate a contact 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create a company with and associate a contact 2`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "domain",
          "value": "test-company.com",
        },
      ],
    },
  ],
  "properties": Array [
    "name",
    "domain",
    "lifecyclestage",
    "segment_group_id",
  ],
  "sorts": Array [
    "name",
  ],
}
`;

exports[`HubSpot.upsertCompany should create a company with and associate a contact 3`] = `
Object {
  "associations": Array [],
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should create a company with and associate a contact 4`] = `undefined`;

exports[`HubSpot.upsertCompany should not associate contact if associateContact flag is set to false 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should skip creating a company if createNewCompany flag is set to false 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should skip creating a company if createNewCompany flag is set to false 2`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "domain",
          "value": "test-company.com",
        },
      ],
    },
  ],
  "properties": Array [
    "name",
    "domain",
    "lifecyclestage",
    "segment_group_id",
  ],
  "sorts": Array [
    "name",
  ],
}
`;

exports[`HubSpot.upsertCompany should update a company with Company Search Fields and associate a contact 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should update a company with Company Search Fields and associate a contact 2`] = `
Object {
  "filterGroups": Array [
    Object {
      "filters": Array [
        Object {
          "operator": "EQ",
          "propertyName": "domain",
          "value": "test-company.com",
        },
      ],
    },
  ],
  "properties": Array [
    "name",
    "domain",
    "lifecyclestage",
    "segment_group_id",
  ],
  "sorts": Array [
    "name",
  ],
}
`;

exports[`HubSpot.upsertCompany should update a company with Company Search Fields and associate a contact 3`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should update a company with Company Search Fields and associate a contact 4`] = `undefined`;

exports[`HubSpot.upsertCompany should update a company with SEGMENT_UNIQUE_IDENTIFIER and associate a contact 1`] = `
Object {
  "properties": Object {
    "address": undefined,
    "city": undefined,
    "description": undefined,
    "domain": "test-company.com",
    "industry": undefined,
    "lifecyclestage": undefined,
    "name": "Test Company",
    "numberofemployees": undefined,
    "phone": undefined,
    "segment_group_id": "test-group-id",
    "state": undefined,
    "zip": undefined,
  },
}
`;

exports[`HubSpot.upsertCompany should update a company with SEGMENT_UNIQUE_IDENTIFIER and associate a contact 2`] = `undefined`;
